improve dto and add AssetService